# rustmotifs

./: .gitignore  Cargo.toml  README.md  appveyor.yml  build.rs
nauty/: COPYRIGHT  gtools.h  naututil.h  nauty.h
src/: lib.rs  main.rs  motifs.rs  nauty.rs  nauty_bindings.rs  network.rs
