[package]
name = "bruteforce"
version = "0.1.0"
authors = ["Boris Pfahringer <bpnzltd@gmail.com>"]
build = "build.rs"

[dependencies]
arrayvec = "*"
fixedbitset = "*"
libc = "0.2"
petgraph = "*"

[profile.release]
debug = true

[dependencies.bindgen]
git = "https://github.com/crabtw/rust-bindgen.git"

[build-dependencies]
gcc = "0.3"
